Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/Include/BTI1553.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    ULONG  ctrlflags;           //User writes message configuration options
    USHORT flag1;               //Card writes message flag 1
    USHORT flag2;               //Card writes message flag 2
    USHORT errflags;            //Card writes error flags
    USHORT actflags;            //Card writes activity flags
    USHORT resptime1;           //Card writes response time 1
    USHORT resptime2;           //Card writes response time 2
    USHORT datacount;           //Card writes data count
    USHORT extflag;             //Driver writes external flags
    ULONG  timetag;             //Card writes time tag
    ULONG  elapsetime;          //Card writes elapsed time
    ULONG  preaddr;             //Driver writes pre-proc address
    ULONG  postaddr;            //Driver writes post-proc address
    ULONG  timetagh;            //Card writes extended timetag
    USHORT resv18;              //Reserved field
    USHORT resv19;              //Reserved field
    USHORT cwd1;                //User writes command word 1
    USHORT cwd2;                //User writes command word 2
    USHORT swd1;                //Card writes status word 1
    USHORT swd2;                //Card writes status word 2
    USHORT data[32];            //User writes data words
    USHORT extra[8];            //User writes extra words
} XMITFIELDS1553;
typedef XMITFIELDS1553 * LPXMITFIELDS1553;
/**
*
*  BTI1553 Driver functions.
*
**/

BTI1553API ERRVAL __stdcall BTI1553_BCConfig(ULONG configval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCConfigEx(ULONG configval,USHORT count,INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_BCConfigMsg(ULONG configval,MSGADDR msgaddr,HCORE handleval);
BTI1553API LISTADDR __stdcall BTI1553_BCCreateList(ULONG listconfigval,INT count,ULONG msgconfigval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_BCCreateMsg(ULONG configval,USHORT cwd1,USHORT cwd2,LPUSHORT data,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_BCPause(INT channum,HCORE handleval);
BTI1553API INT __stdcall BTI1553_BCPauseCheck(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_BCResume(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedAgain(SCHNDX index,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedBranch(ULONG condition,SCHNDX destindex,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCSchedBranchUpdate(SCHNDX destindex,SCHNDX opcodeindex,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCSchedBuild(USHORT nummsgs,LPMSGADDR msgaddr,LPUSHORT freq,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedCall(ULONG condition,SCHNDX destindex,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCSchedCallUpdate(SCHNDX destindex,SCHNDX opcodeindex,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedEntry(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedFrame(ULONG timeval,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedFrameEnd(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedFrameStart(ULONG timeval,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedGap(USHORT gapval,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedHalt(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedLog(ULONG condition,USHORT tagval,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedMsg(MSGADDR msgaddr,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedPause(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedPulse(INT dionum,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedPulse0(INT dionum,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedPulse1(INT dionum,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedRestart(INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedRetry(ULONG condition,USHORT retries,INT channum,HCORE handleval);
BTI1553API SCHNDX __stdcall BTI1553_BCSchedReturn(INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCSetDefaultGap(INT gapval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCSetTimeout(USHORT timeoutval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCSyncDefine(BOOL enableflag,USHORT syncmask,USHORT pinpolarity,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTransmitList(LPXMITFIELDS1553 xmitfields,INT count,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTransmitMsg(LPXMITFIELDS1553 xmitfields,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_BCTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_ChGetCount(LPINT a_count,LPINT b4_count,LPINT b32_count,LPINT c_count,HCORE handleval);
BTI1553API ULONG __stdcall BTI1553_ChGetInfo(USHORT infotype,INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIs1553(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsA(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsB32(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsB4(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsBM(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsC(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsD(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsM(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsP(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsRM(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsS(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChIsX(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChStart(INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ChStop(INT channum,HCORE handleval);
BTI1553API USHORT __stdcall BTI1553_CmdMaxLoopRd(INT channum,HCORE handleval);
BTI1553API VOID __stdcall BTI1553_CmdMaxLoopWr(USHORT countval,INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_CmdShotRd(SCHNDX index,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_CmdShotWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_CmdSkipRd(SCHNDX index,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_CmdSkipWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_CmdStepRd(SCHNDX index,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_CmdStepWr(BOOL value,SCHNDX index,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorCtrl(ULONG ctrlval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorDefine(ULONG defineval,USHORT errvalue,INT countval,USHORT wordpos,USHORT bitpos,INT channum,HCORE handleval);
BTI1553API BOOL __stdcall BTI1553_ErrorSent(INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorTagBC(BOOL tagval,MSGADDR msgaddr,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorTagRT(BOOL tagval,BOOL mcflag,INT taval,BOOL trflag,INT saval,INT channum,HCORE handleval);
BTI1553API ERRVAL __stdcall BTI1553_ErrorTriggerDefine(BOOL enableflag,USHORT trigmask,USHORT trigval,USHORT pinpolarity,INT channum,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListBlockRd(LPUSHORT buf,LISTADDR listaddr,HCORE handleval);
BTI1553API MSGADDR __stdcall BTI1553_ListBlockWr(LPUSHORT buf,LISTADDR listaddr,HCORE handleval);