Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI1553VB.BAS


Public Declare Function BTI1553_BCConfig Lib "BTI1553.DLL" Alias "_BTI1553_BCConfig@12" (ByVal configval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCConfigEx Lib "BTI1553.DLL" Alias "_BTI1553_BCConfigEx@16" (ByVal configval As Long, ByVal count As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCConfigMsg Lib "BTI1553.DLL" Alias "_BTI1553_BCConfigMsg@12" (ByVal configval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCCreateList Lib "BTI1553.DLL" Alias "_BTI1553_BCCreateList@28" (ByVal listconfigval As Long, ByVal count As Long, ByVal msgconfigval As Long, ByVal cwd1 As Integer, ByVal cwd2 As Integer, ByRef data As Integer, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCCreateMsg Lib "BTI1553.DLL" Alias "_BTI1553_BCCreateMsg@20" (ByVal configval As Long, ByVal cwd1 As Integer, ByVal cwd2 As Integer, ByRef data As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_BCPause Lib "BTI1553.DLL" Alias "_BTI1553_BCPause@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_BCPauseCheck Lib "BTI1553.DLL" Alias "_BTI1553_BCPauseCheck@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_BCResume Lib "BTI1553.DLL" Alias "_BTI1553_BCResume@8" (ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_BCSchedAgain Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedAgain@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedBranch Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedBranch@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedBranchUpdate Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedBranchUpdate@16" (ByVal destindex As Long, ByVal opcodeindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedBuild Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedBuild@20" (ByVal nummsgs As Integer, ByRef msgaddr As Long, ByRef freq As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedCall Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedCall@16" (ByVal condition As Long, ByVal destindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedCallUpdate Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedCallUpdate@16" (ByVal destindex As Long, ByVal opcodeindex As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedEntry Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedEntry@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedFrame Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedFrame@12" (ByVal timeval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedFrameEnd Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedFrameEnd@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedFrameStart Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedFrameStart@12" (ByVal timeval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedGap Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedGap@12" (ByVal gapval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedHalt Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedHalt@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedLog Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedLog@16" (ByVal condition As Long, ByVal tagval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedMsg Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedMsg@12" (ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedPause Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedPause@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedPulse Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedPulse@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedPulse0 Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedPulse0@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedPulse1 Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedPulse1@12" (ByVal dionum As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedRestart Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedRestart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedRetry Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedRetry@16" (ByVal condition As Long, ByVal retries As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSchedReturn Lib "BTI1553.DLL" Alias "_BTI1553_BCSchedReturn@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSetDefaultGap Lib "BTI1553.DLL" Alias "_BTI1553_BCSetDefaultGap@12" (ByVal gapval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSetTimeout Lib "BTI1553.DLL" Alias "_BTI1553_BCSetTimeout@12" (ByVal timeoutval As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCSyncDefine Lib "BTI1553.DLL" Alias "_BTI1553_BCSyncDefine@20" (ByVal enableflag As Long, ByVal syncmask As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTransmitList Lib "BTI1553.DLL" Alias "_BTI1553_BCTransmitList@16" (ByRef xmitfieldsval As XMITFIELDS1553, ByVal count As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTransmitMsg Lib "BTI1553.DLL" Alias "_BTI1553_BCTransmitMsg@12" (ByRef xmitfieldsval As XMITFIELDS1553, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_BCTriggerDefine Lib "BTI1553.DLL" Alias "_BTI1553_BCTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTI1553_ChGetCount Lib "BTI1553.DLL" Alias "_BTI1553_ChGetCount@20" (ByRef a_count As Long, ByRef b4_count As Long, ByRef b32_count As Long, ByRef c_count As Long, ByVal handleval As Long)
Public Declare Function BTI1553_ChGetInfo Lib "BTI1553.DLL" Alias "_BTI1553_ChGetInfo@12" (ByVal infotype As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIs1553 Lib "BTI1553.DLL" Alias "_BTI1553_ChIs1553@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsA Lib "BTI1553.DLL" Alias "_BTI1553_ChIsA@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsB32 Lib "BTI1553.DLL" Alias "_BTI1553_ChIsB32@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsB4 Lib "BTI1553.DLL" Alias "_BTI1553_ChIsB4@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsBM Lib "BTI1553.DLL" Alias "_BTI1553_ChIsBM@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsC Lib "BTI1553.DLL" Alias "_BTI1553_ChIsC@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsD Lib "BTI1553.DLL" Alias "_BTI1553_ChIsD@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsM Lib "BTI1553.DLL" Alias "_BTI1553_ChIsM@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsP Lib "BTI1553.DLL" Alias "_BTI1553_ChIsP@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsRM Lib "BTI1553.DLL" Alias "_BTI1553_ChIsRM@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsS Lib "BTI1553.DLL" Alias "_BTI1553_ChIsS@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChIsX Lib "BTI1553.DLL" Alias "_BTI1553_ChIsX@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChStart Lib "BTI1553.DLL" Alias "_BTI1553_ChStart@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ChStop Lib "BTI1553.DLL" Alias "_BTI1553_ChStop@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdMaxLoopRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdMaxLoopRd@8" (ByVal channum As Long, ByVal handleval As Long) As Integer
Public Declare Sub BTI1553_CmdMaxLoopWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdMaxLoopWr@12" (ByVal countval As Integer, ByVal channum As Long, ByVal handleval As Long)
Public Declare Function BTI1553_CmdShotRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdShotRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdShotWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdShotWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdSkipRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdSkipRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdSkipWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdSkipWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdStepRd Lib "BTI1553.DLL" Alias "_BTI1553_CmdStepRd@12" (ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_CmdStepWr Lib "BTI1553.DLL" Alias "_BTI1553_CmdStepWr@16" (ByVal value As Long, ByVal index As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorCtrl Lib "BTI1553.DLL" Alias "_BTI1553_ErrorCtrl@12" (ByVal ctrlval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorDefine Lib "BTI1553.DLL" Alias "_BTI1553_ErrorDefine@28" (ByVal defineval As Long, ByVal errvalue As Integer, ByVal countval As Long, ByVal wordpos As Integer, ByVal bitpos As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorSent Lib "BTI1553.DLL" Alias "_BTI1553_ErrorSent@8" (ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorTagBC Lib "BTI1553.DLL" Alias "_BTI1553_ErrorTagBC@16" (ByVal tagval As Long, ByVal msgaddr As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorTagRT Lib "BTI1553.DLL" Alias "_BTI1553_ErrorTagRT@28" (ByVal tagval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ErrorTriggerDefine Lib "BTI1553.DLL" Alias "_BTI1553_ErrorTriggerDefine@24" (ByVal enableflag As Long, ByVal trigmask As Integer, ByVal trigval As Integer, ByVal pinpolarity As Integer, ByVal channum As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListBlockRd Lib "BTI1553.DLL" Alias "_BTI1553_ListBlockRd@12" (ByRef buf As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
Public Declare Function BTI1553_ListBlockWr Lib "BTI1553.DLL" Alias "_BTI1553_ListBlockWr@12" (ByRef buf As Integer, ByVal listaddr As Long, ByVal handleval As Long) As Long
